--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,7 @@
 	interactive = auto
 	diff = auto
 [alias]
+	ec = config --global -e
 	st = status -sb
 	cm = !git add -A && git commit -m
 	ck = checkout
@@ -14,9 +15,12 @@
 	up = !git pull --rebase --prune $@ && git submodule update --init --recursive
 	ok = push origin
 	save = !git add -A && git commit -m 'SAVEPOINT'
+	restore = reset --mixed HEAD~1
 	amend = commit --amend
 	lg = log --graph --pretty=format:'%C(magenta)%h%Creset -%C(red)%d%Creset %s %C(dim green)(%cr) %C(blue)<%an>%Creset' --abbrev-commit
 	remotes = remote -v
+	remove = branch -D
+	undo = reset --soft HEAD~1
 [merge]
 	tool = kdiff3
 [diff]
