--- a/.wslconfig
+++ b/.wslconfig
@@ -1,5 +1,6 @@
 [wsl2]
-memory=6GB                  # Make sure you have this amount available to use!
+memory=2GB                  # Make sure you have this amount available to use!
+swap=0
 
 # Another option is to disable swap but if the VM goes out of memory, the
 # OOM killer might start killing important processes or the VM may crash.
