--- a/.gitconfig
+++ b/.gitconfig
@@ -18,21 +18,25 @@
 	save = !git add -A && git commit -m 'SAVEPOINT'
 	restore = reset --mixed HEAD~1
 	amend = commit --amend
-	l = log --graph --pretty=format:'%C(magenta)%h%Creset -%C(red)%d%Creset %s %C(dim green)(%cr) %C(blue)<%an>%Creset' --abbrev-commit
+	l = log --graph --pretty=format:'%C(magenta)%h%Creset -%C(red)%d%Creset %s %C(dim cyan)(%cr) %C(yellow)<%an>%Creset' --abbrev-commit
 	remotes = remote -v
 	remove = branch -D
 	undo = reset --soft HEAD~1
 	br = branch -v
 [merge]
 	tool = kdiff3
+	guitool = kdiff3
 [diff]
 	guitool = kdiff3
 [core]
 	autocrlf = true
+	
 [difftool "kdiff3"]
 	path = D:/Programas/KDiff3/kdiff3.exe
+	cmd = \"\" \"$LOCAL\" \"$REMOTE\"
 [mergetool "kdiff3"]
 	path = D:/Programas/KDiff3/kdiff3.exe
+	cmd = \"\" \"$BASE\" \"$LOCAL\" \"$REMOTE\" -o \"$MERGED\"
 [filter "lfs"]
 	required = true
 	clean = git-lfs clean -- %f
@@ -42,3 +46,11 @@
 	gpgsign = true
 [gpg]
 	program = D:/Programas/GnuPG/bin/gpg.exe
+[gui]
+	recentrepo = D:/dev/VipERP
+[pull]
+	rebase = false
+[fetch]
+	prune = false
+[rebase]
+	autoStash = false
